# kdh-standard-mcp

./: README.md  claude_desktop_config.example.json  pyproject.toml  render.yaml  requirements-mcp.txt
src/standard_checker/: __init__.py
src/standard_checker/clients/kcsc/: __init__.py  kcsc.py
src/standard_checker/mcp_server/: mcp_server.py
src/standard_checker/parsers/: excel_parser.py  pdf_parser.py
src/standard_checker/prompts/: __init__.py
